already working to bring the data from the API but still not working the specie model
